--- a/css/index.css
+++ b/css/index.css
@@ -520,3 +520,56 @@ input {
 .colorTaille3:hover {
   background-color: #000578;
 }
+/*-----------------page9------------------*/
+
+.page9 {
+  margin-left: 15%;
+  padding-top: 10vh;
+  background-color: #f8f8f8;
+  display: flex;
+  flex-direction: row;
+}
+.flex1Page9 {
+  margin-right: 2px;
+  margin-top: 2px;
+  width: 20%;
+  height: 100vh;
+  font-size: 24px;
+  text-align: center;
+  font-weight: bold;
+}
+.flex2Page9 {
+  margin-right: 2px;
+  width: 20%;
+  height: 100vh;
+}
+.flex2Page9 img {
+}
+
+.flex3Page9 {
+  margin-right: 2px;
+  width: 20%;
+  height: 100vh;
+  background-color: #33c216;
+}
+
+.flex4Page9 {
+  margin-right: 2px;
+  width: 20%;
+  height: 100vh;
+  background-color: #f10ede;
+}
+.titlePage9 {
+  font-weight: bold;
+  font-size: 24px;
+}
+.texteDescriptifp9 p {
+  padding-top: 5vh;
+  line-height: 160%;
+  color: #606060;
+}
+.texteDescriptifp92 p {
+  padding-top: 5vh;
+  line-height: 160%;
+  color: #606060;
+}
